--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.py",
+      "src": "api/MochaAi.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "MochaAi.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    { "src": "^/$", "dest": "/MochaAi.html" },
+    { "src": "^/api/(.*)$", "dest": "api/MochaAi.py" }
   ]
 }
